[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/start_button.png" type="Texture" id=1]
[ext_resource path="res://scripts/menu_button.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 150, 100 )

[node name="MenuButton" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="input_event" from="Area2D" to="." method="_area_input"]
[connection signal="mouse_entered" from="Area2D" to="." method="_mouse_enter"]
[connection signal="mouse_exited" from="Area2D" to="." method="_mouse_leave"]
